
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/table";

import "prototype/type.proto";

message so_accountAuthorityObject {
	prototype.account_name      account                   =      1;
    prototype.authority         owner                    =      2;
    prototype.time_point_sec    last_owner_update        =      3;
      
}


message so_mem_accountAuthorityObject_by_account {
	prototype.account_name   	account               = 1;
}


message so_mem_accountAuthorityObject_by_owner {
	prototype.authority      	owner                = 1;
}


message so_mem_accountAuthorityObject_by_last_owner_update {
	prototype.time_point_sec 	last_owner_update    = 1;
}


message so_unique_accountAuthorityObject_by_account {
	prototype.account_name   	account               = 1;
}
