
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";

import "prototype/type.proto";

message so_rewardsKeeper {
	int32                          id        =      1;
    prototype.internal_rewards_keeper   keeper     =      2;
      
}


message so_mem_rewardsKeeper_by_id {
	int32                       	id    = 1;
}


message so_mem_rewardsKeeper_by_keeper {
	prototype.internal_rewards_keeper	keeper = 1;
}


message so_unique_rewardsKeeper_by_id {
	int32                       	id    = 1;
}
