
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/table";

import "prototype/type.proto";

message so_witness {
	prototype.account_name            owner                        =      1;
    prototype.witness_schedule_type   witness_schedule_type        =      2;
    prototype.time_point_sec          created_time                 =      3;
    string                            url                          =      4;
    uint64                            vote_count                   =      5;
    uint32                            last_confirmed_block_num     =      6;
    uint32                            total_missed                 =      7;
    uint32                            pow_worker                   =      8;
    prototype.public_key_type         signing_key                  =      9;
    prototype.sha256                  last_work                    =      10;
    uint32                            running_version              =      11;
    uint32                            last_aslot                   =      12;
      
}


message so_list_witness_by_owner {
	prototype.account_name         	owner                    = 1;
}


message so_unique_witness_by_owner {
	prototype.account_name         	owner                    = 1;
}
