
syntax = "proto3";

package table;

option go_package = "github.com/coschain/contentos-go/app/table";


message so_witnessScheduleObject {
	int32                        id                                     =      1;
    repeated                      string                       current_shuffled_witness            =      2;
      
}


message so_mem_witnessScheduleObject_by_id {
	int32                     	id                                 = 1;
}


message so_mem_witnessScheduleObject_by_current_shuffled_witness {
	repeated  	string                    	current_shuffled_witness        = 1;
}


message so_unique_witnessScheduleObject_by_id {
	int32                     	id                                 = 1;
}
